# flay

./: .gitignore  Cargo.toml  README.md  RESIDUAL_TEST_RESULTS.md  USAGE.md  run-matrix.sh
data/: harmful.txt  harmless.txt
data/cyber/: eval.txt  harmful.txt  harmless.txt
data/eval/: utility.jsonl
docs/research/: qwen3-30b-a3b-abliteration-findings.md
runs/run1-projected-gentle/: README.md  flay-report.json  flay-report.md
runs/run2-multi-projected-moderate/: README.md  flay-report.json  flay-report.md
runs/run3-multi-unprojected/: README.md  flay-report.json  flay-report.md
runs/run4-residual-only/: README.md  flay-report.json  flay-report.md
runs/run5-residual-060/: README.md  flay-report.json  flay-report.md
runs/run6-residual-100/: README.md  flay-report.json  flay-report.md
runs/run7-mask-hrcg-k5n40/: README.md  flay-output.txt
runs/run8-decode-capture/: README.md  flay-output.txt
scripts/: compare_heretic.py  parity_test.py
src/: device.rs  lib.rs  main.rs
src/abliterate/: direction_set.rs  directions.rs  mod.rs  multi_direction.rs  orthogonalize.rs  projected.rs  residual_directions.rs  residual_stream.rs  routing.rs  scoring.rs  weight_key.rs
src/analysis/: activations.rs  decode_analysis.rs  kl_divergence.rs  mod.rs  prompts.rs
src/eval/: domain.rs  generate.rs  mod.rs  reasoning.rs  refusal.rs  utility.rs
tests/: arch_trait_tests.rs  bayesian_tests.rs  deepseek_config_tests.rs  eval_tests.rs  math_tests.rs  multi_direction_tests.rs  projected_tests.rs  prompt_loader_tests.rs  safetensors_io_tests.rs  scoring_selection_tests.rs
(+22 files in other folders)
