[package]
name = "flay"
version = "0.1.0"
edition = "2024"
description = "Per-expert abliteration for Mixture-of-Experts language models"
license = "Apache-2.0"
repository = "https://github.com/nooesc/flay"

[features]
default = []
metal = ["candle-core/metal", "candle-nn/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda"]

[dependencies]
candle-core = "0.9"
candle-nn = "0.9"
safetensors = "0.7"
hf-hub = "0.4"
tokenizers = "0.21"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indicatif = "0.17"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
regex = "1"
wait-timeout = "0.2.1"
